<resources>
    <string name="app_name">TENTH-EMPIRE</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="my_details">My Details</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_account">My Account</string>
    <string name="my_notifications">My Notifications</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_password">Create Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="lt_lt_go_back"><![CDATA[<<Go Back]]></string>
    <string name="packed">Packed Kit</string>
    <string name="roller_skates">Roller Skate</string>
    <string name="helmet">Helmet</string>
    <string name="knees_pad">Knee Pad</string>
    <string name="elbow_pad">Elbow Pad</string>
    <string name="wrist_guard">Wrist Guard</string>
    <string name="other_needs">Others</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="price">Price: Kshs.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="order_now">Order Now</string>
    <string name="cart_value">Cart Value</string>
    <string name="add_shipping_details">Add Shipping Details</string>
    <string name="address">Address</string>
    <string name="available_only_in_Tenth_Empire_town_pincodes_10100_and_60200">Available only in Tenth Empire HQ</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="total_cod_value_rs">Total COD Value: Kshs.</string>
    <string name="sign_out">Sign Out</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="message_to_us">Message Feedback</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_message_here">Type message here</string>
    <string name="received_message">Received message</string>
    <string name="sent_message">Sent message</string>
    <string name="offer_text">Offer Text</string>
    <string name="loading_text">Loading…</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_status">Order Status:</string>
    <string name="status">Status</string>
    <string name="ordered_on_date">Ordered on date</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="developer_contacts">Developer Contact</string>
    <string name="search">Search</string>
    <string name="order_id">Order ID :</string>
    <string name="personal_details">Personal Details</string>
    <string name="buy_n_get">Buy n Get</string>
    <string name="rate_your_purchase">Rate Your Purchase</string>
    <string name="view_all">View All</string>
    <string name="experience_in_working_with">Experience in working with…</string>
    <string name="qty">Qty:</string>
    <string name="one">1</string>
    <string name="locality_area_or_street">Locality, Area or Street*</string>
    <string name="flat_no_building_name">Flat No., Building Name*</string>
    <string name="pin_code">Pin Code*</string>
    <string name="landmark">Landmark</string>
    <string name="name">Name*</string>
    <string name="mobile_no">Mobile No*</string>
    <string name="cont">Continue</string>
    <string name="total_amount_cod">Total Amount (COD)</string>
    <string name="place_order">place order</string>
    <string name="you_are_abide_by_the">You are abide by the</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="rs_logo">Kshs: </string>
    <string name="no_ratings_yet">No Ratings yet</string>
    <string name="remove_item">Remove item</string>
    <string name="name__">Name:</string>
    <string name="mobile_no_">Mobile No:</string>
    <string name="mobile_no___">Mobile No</string>
    <string name="_address">Address:</string>
    <string name="address_">Address</string>
    <string name="cancel">Cancel</string>
    <string name="edit">edit</string>
    <string name="shipping_charges_20_for_order_under_200_rs">Shipping Charges Kshs20 For Order Under 200 Kshs/-</string>
    <string name="shop_now">Shop Now</string>
    <string name="never_ordered_from_us_well_better_late_than_never">Never Ordered From Us?.....Well, Better Late Than Never.</string>
    <string name="oops_no_offers_available_right_now">Oops! No Offers Available Right Now…</string>
    <string name="cutted_price">Cutted Price</string>
    <string name="selling_price">Selling Price</string>
    <string name="trending">#Trending</string>
    <string name="popular_items">Popular Items</string>
    <string name="product_cutted_price">Product Cutted Price</string>
    <string name="product_details">Product Details</string>
    <string name="rating">Rating</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="ok">OK</string>
    <string name="shipping_details">SHIPPING DETAILS</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="change_or_add_new_address">Change or Add New Address</string>

    <string name="enter_admin_key">Enter Admin Key</string>
    <string name="enter">Enter</string>
    <string name="add_product">Add Product</string>
<string name="Transport_Fee">Transport Fee: </string>
    <string name="product_code">Product Code</string>


    <string name="authentication_code">Authentication Code</string>

    <string name="product_information">Product Information</string>
    <string name="update_details">Update Details</string>

    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="delivered">Delivered</string>

    <string name="full_name_">Full Name</string>

    <string name="xxxxxxxxxx">xxxxxxxxxx</string>
    <string name="value">Total Cost:</string>
    <string name="Ordered_cost">Ordered Product total cost: </string>

    <string name="items_ordered">Items Ordered</string>
    <string name="product_id">Product ID</string>
    <string name="todo">TODO</string>
</resources>