<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".stockinventor.Activity.CheckOrderDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Details"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/reddish"
        android:id="@+id/orderDetailsText"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderDetailsText"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order ID: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order ID"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Time: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status: "
                android:textSize="16sp"
                android:textStyle="bold" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/statusRadioGroup">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pending"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:background="@color/yellow"
                    android:textColor="@color/colorAccent"

                    android:id="@+id/pendingStatus"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/approved"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:background="@color/productPriceGreen"
                    android:textColor="@color/colorAccent"

                    android:id="@+id/approvedStatus"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Decline"
                    android:layout_margin="2dp"

                    android:textColor="@color/colorAccent"
                    android:background="@color/reddish"
                    android:id="@+id/declineStatus"/>
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Approve"
                android:layout_margin="2dp"

                android:textColor="@color/colorAccent"
                android:background="@color/productPriceGreen"
                android:id="@+id/approveq"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Decline"
                android:layout_margin="2dp"

                android:textColor="@color/colorAccent"
                android:background="@color/reddish"
                android:id="@+id/declineStatusq"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/customerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="email"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxxxxxxxxx"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Transport_Fee"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/transportfeeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="16sp">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ordered_cost"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/orderedproductcost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mpesa code:  "
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ppesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="code"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/items_ordered"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_id"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>