<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".stockinventor.Activity.CheckOrderDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Details"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/reddish"
        android:id="@+id/orderDetailsText"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderDetailsText"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order ID: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order ID"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Time: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Status: "-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold" />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="loading"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold" />-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/customerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxxxxxxxxx"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="16sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="select driver to disburse"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

<!--            <Spinner-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:id="@+id/spinnerq"-->
<!--                android:textAlignment="center"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:background="#998DAA"-->
<!--                android:spinnerMode="dropdown"/>-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="Send this purchase to Shipment manager"
                android:id="@+id/driversel"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp"
                android:background="#998DAA"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/items_ordered"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_id"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>